<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.javiernunez.contactos.MainActivity">

   <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleEditContact"
        android:textSize="@dimen/title"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        />
    -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pideNombre"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pideFecha"
        android:textAlignment="center"
        />

    <DatePicker
        android:layout_width="@dimen/datepicker_ancho"
        android:layout_height="@dimen/datepicker_alto"
        android:layout_gravity="center_horizontal"
        android:id="@+id/inputFecha"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:firstDayOfWeek="2"
        />


     <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pideTelefono"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pideEmail"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.TextInputEditText
            android:lines="3"
            android:id="@+id/inputDescrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pideDescripcion"
            android:gravity="top"/>
    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:elevation="@dimen/activity_vertical_margin">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btSiguiente"
            android:id="@+id/btSiguiente"
            android:layout_gravity="center_horizontal"
            android:onClick="goVerContacto"
            />


    </RelativeLayout>


</LinearLayout>