<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.javiernunez.contactos.ConfirmarContacto">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleConfirmarContactos"
        android:textSize="@dimen/title"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNombre"
        android:textSize="@dimen/textoDatos"
        android:layout_marginTop="@dimen/margenSupDatos"
        android:layout_marginLeft="@dimen/marginIzqDatos"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView
        android:id="@+id/txtFechaTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fnac"
        android:textSize="@dimen/textoDatos"
        android:layout_marginTop="@dimen/margenSupDatos"
        />
        <TextView
            android:id="@+id/txtFechaDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textoDatos"
            android:layout_marginTop="@dimen/margenSupDatos"
            android:layout_marginLeft="@dimen/marginIzqDatos"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textoDatos"
            android:layout_marginTop="@dimen/margenSupDatos"
            android:text="@string/separa_fecha"
            />
        <TextView
            android:id="@+id/txtFechaMes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textoDatos"
            android:layout_marginTop="@dimen/margenSupDatos"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textoDatos"
            android:layout_marginTop="@dimen/margenSupDatos"
            android:text="@string/separa_fecha"
            />

        <TextView
            android:id="@+id/txtFechaAnyo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textoDatos"
            android:layout_marginTop="@dimen/margenSupDatos"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView
            android:id="@+id/txtEmailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/textoDatos"
            android:layout_marginTop="@dimen/margenSupDatos"
            />
        <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/textoDatos"
        android:layout_marginTop="@dimen/margenSupDatos"
            android:layout_marginLeft="@dimen/marginIzqDatos"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView
            android:id="@+id/txtTelefTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:textSize="@dimen/textoDatos"
            android:layout_marginTop="@dimen/margenSupDatos"
            />
        <TextView
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoDatos"
        android:layout_marginTop="@dimen/margenSupDatos"
            android:layout_marginLeft="@dimen/marginIzqDatos"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView
            android:id="@+id/txtDescTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textSize="@dimen/textoDatos"
            android:layout_marginTop="@dimen/margenSupDatos"
            />
        <TextView
        android:id="@+id/txtDescripcion"
        android:layout_marginLeft="@dimen/marginIzqDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoDatos"
        android:layout_marginTop="@dimen/margenSupDatos"
        />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margenSupDatos"
        android:text="@string/btEditarContacto"
        android:id="@+id/btEditarContacto"
        android:layout_gravity="center_horizontal"
        android:onClick="goEditarContacto"
        />

</LinearLayout>
